--- a/BioHMM.cabal
+++ b/BioHMM.cabal
@@ -28,7 +28,7 @@ library
   exposed-modules:   Bio.HMMData
                      Bio.HMMParser
                      Bio.HMMDraw
-                     Bio.HMMCompare
+                     Bio.HMMCompareResult
 
   -- compiler-options:
   ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
