--- a/BioHMM.cabal
+++ b/BioHMM.cabal
@@ -1,5 +1,5 @@
 name:                BioHMM
-version:             1.0.2
+version:             1.0.3
 synopsis:            Libary for Hidden Markov Models in HMMER3 format. 
 description:         Libary containing parsing and visualisation functions and datastructures for Hidden Markov Models in HMMER3 format.  
 license:             GPL-3
@@ -16,12 +16,12 @@ extra-source-files:
 
 source-repository head
   type:     git
-  location: https://github.com/eggzilla/HMM
+  location: https://github.com/eggzilla/BioHMM
 
 source-repository this
   type:     git
-  location: https://github.com/eggzilla/HMM/tree/1.0.2
-  tag:      1.0.2
+  location: https://github.com/eggzilla/BioHMM/tree/1.0.3
+  tag:      1.0.3
 
 library
   -- Modules exported by the library.
@@ -34,7 +34,7 @@ library
   ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.5 && <5, parsec>=3.1.9, diagrams-lib>=1.4.0.1, text, vector, ParsecTools, diagrams-cairo>=1.4, filepath, colour, directory, either-unwrap, SVGFonts >= 1.6, StockholmAlignment
+  build-depends:       base >=4.5 && <5, parsec>=3.1.9, diagrams-lib>=1.3, text, vector, ParsecTools, diagrams-cairo>=1.3, filepath, colour, directory, either-unwrap, SVGFonts >= 1.6, StockholmAlignment
   
   -- Directories containing source files.
   hs-source-dirs:      src
