--- a/BioHMM.cabal
+++ b/BioHMM.cabal
@@ -1,5 +1,5 @@
 name:                BioHMM
-version:             1.0.6
+version:             1.0.7
 synopsis:            Libary for Hidden Markov Models in HMMER3 format. 
 description:         Libary containing parsing and visualisation functions and datastructures for Hidden Markov Models in HMMER3 format.  
 license:             GPL-3
@@ -20,8 +20,8 @@ source-repository head
 
 source-repository this
   type:     git
-  location: https://github.com/eggzilla/BioHMM/tree/1.0.6
-  tag:      1.0.6
+  location: https://github.com/eggzilla/BioHMM/tree/1.0.7
+  tag:      1.0.7
 
 library
   -- Modules exported by the library.
@@ -31,7 +31,7 @@ library
                      Bio.HMMCompareResult
 
   -- compiler-options:
-  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
+  ghc-options:         -Wall 
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.5 && <5, parsec>=3.1.9, diagrams-lib>=1.3, text, vector, ParsecTools, diagrams-cairo>=1.3, filepath, colour, directory, either-unwrap, SVGFonts >= 1.6, StockholmAlignment
