--- a/BioHMM.cabal
+++ b/BioHMM.cabal
@@ -31,7 +31,7 @@ library
                      Bio.HMMCompareResult
 
   -- compiler-options:
-  ghc-options:         -Wall 
+  ghc-options:         -Wall -fno-warn-unused-do-bind
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.5 && <5, parsec>=3.1.9, diagrams-lib>=1.3, text, vector, ParsecTools, diagrams-cairo>=1.3, filepath, colour, directory, either-unwrap, SVGFonts >= 1.6, StockholmAlignment
