--- a/BioHMM.cabal
+++ b/BioHMM.cabal
@@ -1,11 +1,11 @@
 name:                BioHMM
-version:             1.0.8
+version:             1.0.9
 synopsis:            Libary for Hidden Markov Models in HMMER3 format. 
 description:         Libary containing parsing and visualisation functions and datastructures for Hidden Markov Models in HMMER3 format.  
 license:             GPL-3
 license-file:        LICENSE
 author:              Florian Eggenhofer
-maintainer:          egg@tbi.univie.ac.at
+maintainer:          egg@informatik.uni-freiburg.de
 -- copyright:           
 category:            Bioinformatics
 build-type:          Simple
@@ -20,8 +20,8 @@ source-repository head
 
 source-repository this
   type:     git
-  location: https://github.com/eggzilla/BioHMM/tree/1.0.8
-  tag:      1.0.8
+  location: https://github.com/eggzilla/BioHMM/tree/1.0.9
+  tag:      1.0.9
 
 library
   -- Modules exported by the library.
@@ -34,7 +34,7 @@ library
   ghc-options:         -Wall -fno-warn-unused-do-bind
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.5 && <5, parsec>=3.1.9, diagrams-lib>=1.3, text, vector, ParsecTools, diagrams-cairo>=1.3, filepath, colour, directory, either-unwrap, SVGFonts >= 1.6, StockholmAlignment
+  build-depends:       base >=4.5 && <5, parsec>=3.1.9, diagrams-lib>=1.3, text, vector, ParsecTools, diagrams-cairo>=1.3, filepath, colour, directory, either-unwrap, SVGFonts >= 1.6, StockholmAlignment>=1.0.2
   
   -- Directories containing source files.
   hs-source-dirs:      src
