--- a/stack.yaml
+++ b/stack.yaml
@@ -2,7 +2,7 @@
 # For more information, see: https://github.com/commercialhaskell/stack/blob/master/doc/yaml_configuration.md
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-7.14
+resolver: lts-8.16
 # Local packages, usually specified by relative directory name
 ghc-options:
   "*": -j
@@ -10,7 +10,8 @@ packages:
 - '.'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-#extra-deps:
+extra-deps:
+- StockholmAlignment-1.1.1
 # Override default flag values for local packages and extra-deps
 flags: {}
 
